--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,7 @@
   -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
           box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
   background: #fff;
+  border: 0px solid;
 }
 
 .template-layout .template .item_one .card-section .social-links .accordion .accordion-item h2 .accordion-button {
@@ -430,6 +431,134 @@
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   padding-top: 15px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details {
+  border: 15px solid #333;
+  border-radius: 5em;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout {
+  position: relative;
+  margin: auto;
+  max-width: 530px;
+  padding-bottom: 100px;
+  padding-top: 33px;
+  padding-right: 33px;
+  padding-left: 33px;
+  -webkit-box-shadow: 0 7px 29px 0 #64646f33;
+          box-shadow: 0 7px 29px 0 #64646f33;
+  text-align: center;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-img {
+  max-width: 200px;
+  margin: auto;
+  margin-bottom: 33px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-title {
+  font-weight: 700;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-description {
+  font-size: 13.8px;
+  font-weight: 400;
+  margin-bottom: 33px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .selected-social-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 33px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .selected-social-icon .selected-icon {
+  width: 24px;
+  margin: 5px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-card .priview-card-body {
+  color: #333333;
+  background: #f1dfd5;
+  -webkit-box-shadow: #0000004d 0px 10px 30px 0px;
+          box-shadow: #0000004d 0px 10px 30px 0px;
+  margin-bottom: 22px;
+  text-align: left;
+  border-radius: 10px;
+  padding: 16.5px 13.75px;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-card .priview-card-body .main-title {
+  font-size: 16px;
+  font-weight: 600;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .card-layout .priview-all .priview-card .priview-card-body .subtitle-title {
+  font-size: 13px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .footer-text {
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100px;
+  z-index: 2;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .footer-text .powered-by {
+  color: #000;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+  font-size: .8em;
+  font-weight: 500;
+  margin-bottom: 0;
+  opacity: .6;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .footer-text .link-text {
+  font-size: 16px;
+  font-weight: 800;
+  color: #000;
+}
+
+.template-layout .template .item_two .priview-layout .priview-details .footer-text .link-text img {
+  height: 16px;
+  margin-right: 4px;
+  margin-top: -2px;
 }
 
 @media screen and (max-width: 1300px) {
