--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -338,8 +338,8 @@
             background: #f7f7f7;
             flex: 1 1 auto;
             padding-top: 15px;
-             .priview-layout {
-                 .priview-details {
+             .preview-layout {
+                 .preview-details {
                         border: 15px solid #333;
                         border-radius: 5em;
                     .card-layout {
@@ -352,18 +352,18 @@
                         padding-left: 33px;
                         box-shadow: 0 7px 29px 0 #64646f33;
                         text-align: center;
-                        .priview-all {
-                            .priview-img {
+                        .preview-all {
+                            .preview-img {
                                 max-width: 200px;
                                 margin: auto;
                                 margin-bottom: 33px;
                             }
-                            .priview-title {
+                            .preview-title {
                                 font-weight: 700;
                                 font-size: 15px;
                                 margin-bottom: 20px;
                             }
-                            .priview-description {
+                            .preview-description {
                                 font-size: 13.8px;
                                 font-weight: 400;
                                 margin-bottom: 33px;
@@ -379,8 +379,8 @@
                                     margin: 5px;
                                 }
                             }
-                            .priview-card {
-                                .priview-card-body {
+                            .preview-card {
+                                .preview-card-body {
                                         color: rgb(51, 51, 51);
                                         background: rgb(241, 223, 213);
                                         box-shadow: #0000004d 0px 10px 30px 0px;
