--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,23 @@
+// comman css
+
+
+.form-control {
+    border: 0px solid #dadcde;
+    box-shadow: inset 0 1px 8px #00000029,
+        inset 0 0.25px 2px #00000052;
+}
+.input-group-text {
+    cursor: pointer;
+}
+
+// comman css
+
+
+
+
+
+
+
 .template-layout {
     background-color: #fff;
     .template-header {
@@ -41,6 +61,13 @@
             align-items: center;
             padding: 0 10px;
             border-bottom: 2px solid #dfe0e1;
+            .my-link {
+                font-weight: 600;
+                font-size: 13px;
+            }
+            img {
+                height: 13px;
+            }
 
             .button-links {
 
@@ -310,7 +337,7 @@
                                                     -ms-transform: scale(1.1);
                                                     -o-transform: scale(1.1);
                                                     transition: all .2s ease;
-}
+                                                }
                                             }
                                             img {
                                                 width: 15px;
@@ -321,7 +348,7 @@
                                                 -moz-transform: scale(1);
                                                 -ms-transform: scale(1);
                                                 -o-transform: scale(1);
-}
+                                            }
                                         }
                                     }
                                 }
@@ -406,39 +433,42 @@
                                 }
                             }
                         }
+                         .footer-text {
+                             position: absolute;
+                             bottom: 0px;
+                             left: 0;
+                             width: 100%;
+                             display: flex;
+                             flex-direction: column;
+                             justify-content: center;
+                             align-items: center;
+                             height: 100px;
+                             z-index: 2;
 
+                             .powered-by {
+                                 color: #000;
+                                 text-transform: uppercase;
+                                 letter-spacing: .5px;
+                                 font-size: .8em;
+                                 font-weight: 500;
+                                 margin-bottom: 0;
+                                 opacity: .6;
+                             }
+
+                             .link-text {
+                                 font-size: 16px;
+                                 font-weight: 800;
+                                 color: #000;
+
+                                 img {
+                                     height: 16px;
+                                     margin-right: 4px;
+                                     margin-top: -2px;
+                                 }
+                             }
+                         }
                     }
-                    .footer-text {
-                        position: absolute;
-                        bottom: 60px;
-                        left: 0;
-                        width: 100%;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        height: 100px;
-                        z-index: 2;
-                        .powered-by {
-                            color: #000;
-                            text-transform: uppercase;
-                            letter-spacing: .5px;
-                            font-size: .8em;
-                            font-weight: 500;
-                            margin-bottom: 0;
-                            opacity: .6;
-                        }
-                        .link-text {
-                            font-size: 16px;
-                            font-weight: 800;
-                            color: #000;
-                            img {
-                                height: 16px;
-                                margin-right: 4px;
-                                margin-top: -2px;
-                            }
-                        }
-                    }
+
                  }
              }
         }
@@ -446,6 +476,100 @@
 }
 
 
+.newBlockModel {
+    max-width: 450px;
+    .modal-body {
+        .model-row {
+            display: flex;
+            flex-wrap: wrap;
+
+            .model-card {
+                padding: 11px;
+                border-radius: 6px;
+                box-shadow: 0 2px 16px #00000014,
+                    0 0.25px 2px #00000042;
+                background: #fff;
+                margin: 6px;
+                width: calc(50% - 12px);
+                text-align: center;
+                cursor: pointer;
+
+                img {
+                    margin-bottom: 6px;
+                }
+
+                .model-card-title {
+                    margin-bottom: 6px;
+                    font-size: 14px;
+                    font-weight: 700;
+                }
+
+                .model-card-dec {
+                    font-size: 12px;
+                    color: #727272;
+                }
+            }
+        }
+    }
+}
+
+
+
+.select-card-layout {
+    display: flex;
+    margin-bottom: 11px;
+    .card-view-layout {
+        position: relative;
+        flex: 1;
+        border: 3px solid transparent;
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        padding: 3px;
+        background-color: #dfe0e1;
+        margin-right: 6px;
+        cursor: pointer;
+        &.selected {
+            border-color: #1b97f5;
+        }
+    }
+}
+.link_preview {
+    border: 1px solid #dfe0e1;
+    padding: 16.5px 16.5px 0;
+    .live-preview {
+        border-color: rgb(51, 51, 51);
+        border-width: 0px;
+        border-radius: 5.6px;
+        box-shadow: #0000004d 0px 10px 30px 0px;
+        margin-bottom: 22px;
+        margin-right: 0px;
+        display: block;
+        text-decoration: none;
+        .details {
+            color: rgb(51, 51, 51);
+            background: rgb(241, 223, 213);
+            padding: 16.5px 13.75px;
+            .title {
+                font-weight: 700;
+                font-size: 0.98em;
+                // text-align: center;
+                margin-bottom: 6px;
+                 display: -webkit-box;
+                 -webkit-box-orient: vertical;
+                 -webkit-line-clamp: 3;
+                 overflow: hidden;
+            }
+            .dec {
+                font-size: 13px;
+                 display: -webkit-box;
+                 -webkit-box-orient: vertical;
+                 -webkit-line-clamp: 3;
+                 overflow: hidden;
+            }
+        }
+    }
+}
 
 @media screen and (max-width:1300px) {
     .template-layout {
@@ -506,4 +630,10 @@
     }
 
 
+}
+
+@media screen and (max-width:992px) {
+    .modal-body {
+        padding: 0.5rem;
+    }
 }
