--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -12,7 +12,12 @@
 input[type=checkbox]:checked+label {
     background-color: #c5c6c7;
 }
-
+.footer {
+    padding: 0;
+}
+.page-body {
+    margin-bottom: 0;
+}
 // comman css
 
 
@@ -371,7 +376,7 @@ input[type=checkbox]:checked+label {
 
         .item_two {
             position: relative;
-            padding: 44px 22px;
+            padding: 44px 22px 0;
             background: #f7f7f7;
             flex: 1 1 auto;
             padding-top: 15px;
@@ -379,6 +384,12 @@ input[type=checkbox]:checked+label {
                  .preview-details {
                         border: 15px solid #333;
                         border-radius: 5em;
+                        overflow-y: auto;
+                        max-height: calc(100vh - 110px);
+                        &::-webkit-scrollbar {
+                            width: 0px;
+                        }
+
                     .card-layout {
                         position: relative;
                         margin: auto;
@@ -547,37 +558,282 @@ input[type=checkbox]:checked+label {
 .link_preview {
     border: 1px solid #dfe0e1;
     padding: 16.5px 16.5px 0;
-    .live-preview {
-        border-color: rgb(51, 51, 51);
-        border-width: 0px;
-        border-radius: 5.6px;
-        box-shadow: #0000004d 0px 10px 30px 0px;
-        margin-bottom: 22px;
-        margin-right: 0px;
-        display: block;
-        text-decoration: none;
-        .details {
-            color: rgb(51, 51, 51);
-            background: rgb(241, 223, 213);
-            padding: 16.5px 13.75px;
-            .title {
-                font-weight: 700;
-                font-size: 0.98em;
-                // text-align: center;
-                margin-bottom: 6px;
-                 display: -webkit-box;
-                 -webkit-box-orient: vertical;
-                 -webkit-line-clamp: 3;
-                 overflow: hidden;
+
+    &.normal {
+        .live-preview {
+                border-color: rgb(51, 51, 51);
+                border-width: 0px;
+                border-radius: 5.6px;
+                box-shadow: #0000004d 0px 10px 30px 0px;
+                margin-bottom: 22px;
+                margin-right: 0px;
+                text-decoration: none;
+            &.normal-view {
+                display: block;
             }
-            .dec {
-                font-size: 13px;
-                 display: -webkit-box;
-                 -webkit-box-orient: vertical;
-                 -webkit-line-clamp: 3;
-                 overflow: hidden;
+
+            .details {
+                color: rgb(51, 51, 51);
+                background: rgb(241, 223, 213);
+                padding: 16.5px 13.75px;
+
+                .title {
+                    font-weight: 700;
+                    font-size: 0.98em;
+                    // text-align: center;
+                    margin-bottom: 6px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+
+                .dec {
+                    font-size: 13px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
             }
         }
+
+
+    }
+
+    &.thumbnail-basic {
+        .live-preview {
+            border-color: rgb(51, 51, 51);
+            border-width: 0px;
+            border-radius: 5.6px;
+            box-shadow: #0000004d 0px 10px 30px 0px;
+            margin-bottom: 22px;
+            margin-right: 0px;
+            text-decoration: none;
+            &.thumbnail-view {
+
+                display: flex;
+            }
+            .thumbnail-img {
+                width: 32%;
+            }
+
+            .details {
+                color: rgb(51, 51, 51);
+                background: rgb(241, 223, 213);
+                padding: 16.5px 13.75px;
+                width: 68%;
+                .title {
+                    font-weight: 700;
+                    font-size: 0.98em;
+                    // text-align: center;
+                    margin-bottom: 6px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+
+                .dec {
+                    font-size: 13px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+            }
+        }
+
+    }
+
+    &.button-image-background {
+        .live-preview {
+            border-color: rgb(51, 51, 51);
+            border-width: 0px;
+            border-radius: 5.6px;
+            box-shadow: #0000004d 0px 10px 30px 0px;
+            margin-bottom: 22px;
+            margin-right: 0px;
+            text-decoration: none;
+            &.image-background-view {
+                display: block;
+            }
+
+            .details {
+                color: rgb(51, 51, 51);
+                background-position: 50%;
+                background-size: cover;
+                min-height: 105px;
+                padding: 16.5px 13.75px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                .title {
+                    font-weight: 700;
+                    font-size: 0.98em;
+                    // text-align: center;
+                    margin-bottom: 6px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+
+                .dec {
+                    font-size: 13px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+            }
+        }
+
+    }
+
+    &.thumbnail-highlight {
+        .live-preview {
+            border-color: rgb(51, 51, 51);
+            border-width: 0px;
+            border-radius: 5.6px;
+            box-shadow: #0000004d 0px 10px 30px 0px;
+            margin-bottom: 22px;
+            margin-right: 0px;
+            text-decoration: none;
+            &.thumbnail-highlight-view {
+                display: block;
+            }
+            .thumbnail-highlight-img {
+                padding-bottom: 66.6667%;
+                background-size: cover;
+                background-position: 50%;
+            }
+
+            .details {
+                color: rgb(51, 51, 51);
+                background: rgb(241, 223, 213);
+                padding: 16.5px 13.75px;
+                .title {
+                    font-weight: 700;
+                    font-size: 0.98em;
+                    // text-align: center;
+                    margin-bottom: 6px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+
+                .dec {
+                    font-size: 13px;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 3;
+                    overflow: hidden;
+                }
+            }
+        }
+
+    }
+
+    &.thumbnail-grid {
+        .live-preview {
+             &.grid-2 {
+                 a {
+                     width: calc(50% - 11px);
+                 }
+             }
+
+             &.grid-3 {
+                 a {
+                     width: calc(33.3333% - 14.6667px);
+                 }
+             }
+            &.thumbnail-grid-view {
+                display: flex;
+
+            }
+
+            a {
+                border-color: rgb(51, 51, 51);
+                border-width: 0px;
+                border-radius: 5.6px;
+                box-shadow: #0000004d 0px 10px 30px 0px;
+                margin: 10px;
+                text-decoration: none;
+                margin-bottom: 22px;
+                border-radius: 15px;
+            }
+            .thumbnail-grid-img {
+                padding-bottom: 100%;
+                background-size: cover;
+                background-position: 50%;
+                border-radius: 15px;
+            }
+        }
+
+    }
+
+        &.thumbnail-carousel {
+            overflow: auto;
+            .live-preview {
+
+
+                &.thumbnail-carousel-view {
+                    display: inline-flex;
+                    align-items: flex-start;
+                    margin-bottom: 22px;
+                }
+                a {
+                    border-color: rgb(51, 51, 51);
+                    border-width: 0px;
+                    border-radius: 5.6px;
+                    box-shadow: #0000004d 0px 10px 30px 0px;
+                    margin-bottom: 22px;
+                    margin-right: 22px;
+                    text-decoration: none;
+                    display: block;
+                    width: 272px;
+                }
+
+                .thumbnail-carousel-img {
+                    padding-bottom: 66.6667%;
+                    background-size: cover;
+                    background-position: 50%;
+                }
+
+                .details {
+                    color: rgb(51, 51, 51);
+                    background: rgb(241, 223, 213);
+                    padding: 16.5px 13.75px;
+
+                    .title {
+                        font-weight: 700;
+                        font-size: 0.98em;
+                        // text-align: center;
+                        margin-bottom: 6px;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 3;
+                        overflow: hidden;
+                    }
+
+                    .dec {
+                        font-size: 13px;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 3;
+                        overflow: hidden;
+                    }
+                }
+            }
+
+        }
+
+    .live-preview {
+
+        display: none;
+
     }
 }
 
