--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -18,6 +18,51 @@ input[type=checkbox]:checked+label {
 .page-body {
     margin-bottom: 0;
 }
+
+.tooltip-layout {
+    position: relative;
+    display: inline-block;
+    // border-bottom: 1px dotted black;
+}
+.tooltip-top {
+    bottom: 125%;
+    left: calc(50% - 150px);
+}
+// .tooltip-top::after {
+//     content: "";
+//     position: absolute;
+//     top: 100%;
+//     left: calc(50% - 150px);
+//     margin-left: -5px;
+//     border-width: 5px;
+//     border-style: solid;
+//     border-color: #dfe0e1 transparent transparent transparent;
+// }
+.tooltip-layout .tooltiptext {
+    visibility: hidden;
+    background-color: #dfe0e1;
+    color: #000;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    min-width: 300px;
+    background: #dfe0e1;
+    padding: 11px;
+    max-width: 400px;
+    box-shadow: 0 2px 4px 0 #4c4c4b1a;
+    border: 1px solid #bababa;
+}
+
+.tooltip-layout:hover .tooltiptext {
+    visibility: visible;
+}
+img.question_mark {
+    height: 17px;
+    vertical-align: sub;
+    margin-right: 5px;
+    cursor: help;
+}
 // comman css
 
 
@@ -834,6 +879,45 @@ input[type=checkbox]:checked+label {
 
         display: none;
 
+    }
+}
+
+
+label.input-file {
+    cursor: pointer;
+    border-radius: 6px;
+    box-shadow: 0 2px 16px #00000014,
+    0 0.25px 2px #00000042;
+    background: #fff;
+    // padding: 0 11px;
+    height: 77px;
+    width: 100%;
+    position: relative;
+    height: 100%;
+    input {
+        display: none;
+    }
+    .fileRow {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 11px;
+        .fileLabel {
+            display: inline-flex;
+            color: #1a1a1a;
+            position: relative;
+            align-items: center;
+            margin-right: 22px;
+            font-weight: 600;
+        }
+        .fileImg {
+            border-radius: 5px;
+            width: 55px;
+            height: 55px;
+            border: 1px solid #dfe0e1;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
     }
 }
 
