--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,90 @@ img.question_mark {
   font-weight: 600;
 }
 
+.jcolor-picker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  position: unset;
+}
+
+.jcolor-picker .jcp-color-preview [data-type="color-tb"] {
+  width: 60px;
+  height: 18px;
+  font-size: 13px;
+}
+
+.jcolor-picker [data-type="types"] input[type="text"] {
+  width: 35px;
+  height: 18px;
+  font-size: 13px;
+}
+
+.color-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+          box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+  background: #fff;
+  height: 44px;
+  padding: 0 11px;
+  position: relative;
+}
+
+.color-label {
+  font-weight: 500;
+}
+
+.range-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+          box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+  background: #fff;
+  height: 44px;
+  padding: 0 11px;
+  position: relative;
+}
+
+.range-label {
+  font-weight: 500;
+}
+
+.form-range {
+  width: 130px;
+}
+
+.jcolor-picker [data-type="btn"] {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.jcolor-picker [data-type="btn"] > [data-type="arrow"] {
+  display: none;
+}
+
 .template-layout {
   background-color: #fff;
 }
@@ -1111,6 +1195,35 @@ label.input-file .fileRow .fileImg {
 .preview-card .link_preview .details .title {
   font-size: 16px !important;
   font-weight: 700 !important;
+}
+
+.general-option {
+  padding-bottom: 50px;
+}
+
+div#Design {
+  max-height: calc(100vh - 130px);
+}
+
+.title-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title-row .line {
+  width: 100%;
+  border-bottom: 1px solid #dfe0e1;
+  margin: 25px 0;
+}
+
+.title-row .design-title {
+  padding: 0 16.5px;
+  font-style: italic;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 1300px) {
