--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -71,6 +71,76 @@ img.question_mark {
     font-weight: 600;
 }
 
+
+
+
+.jcolor-picker {
+     display: -webkit-box;
+     display: -ms-flexbox;
+     display: flex;
+    //  background: #383838;
+     color: #fff;
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 13px;
+    position: unset;
+
+}
+.jcolor-picker .jcp-color-preview [data-type="color-tb"] {
+    width: 60px;
+    height: 18px;
+    font-size: 13px;
+}
+.jcolor-picker [data-type="types"] input[type="text"] {
+    width: 35px;
+    height: 18px;
+    font-size: 13px;
+}
+.color-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px;
+    box-shadow: 0 2px 16px #00000014,
+    0 0.25px 2px #00000042;
+    background: #fff;
+    height: 44px;
+    padding: 0 11px;
+    position: relative;
+}
+.color-label {
+    font-weight: 500;
+}
+
+.range-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px;
+    box-shadow: 0 2px 16px #00000014,
+    0 0.25px 2px #00000042;
+    background: #fff;
+    height: 44px;
+    padding: 0 11px;
+    position: relative;
+}
+.range-label {
+    font-weight: 500;
+}
+.form-range {
+    width: 130px;
+}
+.jcolor-picker [data-type="btn"] {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.jcolor-picker [data-type="btn"]>[data-type="arrow"] {
+    display: none;
+}
+
+
 // comman css
 
 
@@ -606,6 +676,9 @@ img.question_mark {
         &.selected {
             border-color: #1b97f5;
         }
+        // .card-view-img {
+        //     width: 48px;
+        // }
     }
 }
 .link_preview {
@@ -980,6 +1053,40 @@ label.input-file {
         }
     }
 }
+
+
+
+// design option css
+
+.general-option {
+    padding-bottom: 50px;
+}
+
+div#Design {
+    max-height: calc(100vh - 130px);
+}
+
+.title-row {
+    display: flex;
+    align-items: center;
+    .line {
+        width: 100%;
+        border-bottom: 1px solid #dfe0e1;
+        margin: 25px 0;
+    }
+    .design-title {
+        padding: 0 16.5px;
+        font-style: italic;
+        white-space: nowrap;
+    }
+}
+
+
+
+// design option css
+
+
+
 
 @media screen and (max-width:1300px) {
     .template-layout {
